--- a/FNP_2020_FinCausal/baseline/requirements.txt
+++ b/FNP_2020_FinCausal/baseline/requirements.txt
@@ -1,116 +1,8 @@
-absl-py==0.9.0
-astor==0.8.1
-attrs==19.3.0
-backcall==0.1.0
-bleach==3.1.0
-boto3==1.10.6
-botocore==1.13.6
-cachetools==4.0.0
-certifi==2019.9.11
-cffi==1.13.1
-chardet==3.0.4
-Click==7.0
-colorama==0.4.1
-decorator==4.4.1
-defusedxml==0.6.0
-dill==0.3.1.1
-docutils==0.15.2
-entrypoints==0.3
-filelock==3.0.12
-future==0.18.2
-gast==0.2.2
-google-auth==1.11.3
-google-auth-oauthlib==0.4.1
-google-pasta==0.2.0
-googleapis-common-protos==1.51.0
-grpcio==1.27.2
-h5py==2.10.0
-idna==2.8
-importlib-metadata==0.23
-ipykernel==5.1.3
-ipython==7.9.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-jedi==0.15.1
-Jinja2==2.10.3
-jmespath==0.9.4
-joblib==0.13.2
-jsonschema==3.1.1
-jupyter==1.0.0
-jupyter-client==5.3.4
-jupyter-console==6.0.0
-jupyter-core==4.6.0
-Keras==2.3.1
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
-Markdown==3.2.1
-MarkupSafe==1.1.1
-mistune==0.8.4
-mkl-fft==1.0.14
-mkl-random==1.1.0
-mkl-service==2.3.0
-more-itertools==7.2.0
-nbconvert==5.6.0
-nbformat==4.4.0
-notebook==6.0.1
-numpy==1.16.5
-oauthlib==3.1.0
-opt-einsum==3.2.0
-pandas==0.25.2
-pandocfilters==1.4.2
-parso==0.5.1
-pickleshare==0.7.5
-Pillow==7.0.0
-prometheus-client==0.7.1
-promise==2.3
-prompt-toolkit==2.0.10
-protobuf==3.10.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.19
-Pygments==2.4.2
-pyrsistent==0.15.4
-python-dateutil==2.8.0
-pytorch-pretrained-bert==0.6.2
-pytorch-transformers==1.2.0
-pytz==2019.3
-pywin32==223
-pywinpty==0.5.5
-PyYAML==5.3
-pyzmq==18.1.0
-qtconsole==4.5.5
-regex==2019.8.19
-requests==2.22.0
-requests-oauthlib==1.3.0
-rsa==4.0
-s3transfer==0.2.1
-sacremoses==0.0.35
-scikit-learn==0.21.3
-scipy==1.4.1
-Send2Trash==1.5.0
-sentencepiece==0.1.83
-six==1.12.0
-tensorboard==2.1.1
-tensorboardX==1.9
-tensorflow==2.1.0
-tensorflow-datasets==2.1.0
-tensorflow-estimator==2.1.0
-tensorflow-metadata==0.21.1
-termcolor==1.1.0
-terminado==0.8.2
-testpath==0.4.2
-tokenizers==0.5.2
-torch==1.0.1
-torchvision==0.2.0
-tornado==6.0.3
-tqdm==4.36.1
-traitlets==4.3.3
-transformers==2.5.1
-urllib3==1.25.6
-wcwidth==0.1.7
-webencodings==0.5.1
-Werkzeug==1.0.0
-widgetsnbextension==3.5.1
-wincertstore==0.2
-wrapt==1.12.1
-zipp==0.6.0
+transformers
+scikit-learn
+keras
+tensorflow
+pandas
+nltk
+funcy
+python-crfsuite
